--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,33 @@
 body {
-  background-color: #f8f9fa;
+  background: url(../public/backMainLogin.jpg) center bottom no-repeat;
+  background-size: cover;
+  font-family: "Open Sans", sans-serif !important;
+}
+
+.containerMain {
+  height: 100vh;
+  align-items: center;
+  color: rgba(255, 255, 255, 1);
+}
+.formContainer {
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+}
+button {
+  width: 50%;
+  display: flex;
+  justify-self: center;
+  text-align: center;
+  justify-content: center;
+  border: solid rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
+  background: rgba(0, 0, 0, 1);
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.message {
+  color: #eec443;
+}
+#devtools-indicator {
+  display: none !important;
 }
